--- a/src/index.css
+++ b/src/index.css
@@ -121,3 +121,17 @@
     font-size: 3rem;
   }
 }
+
+.swiper-pagination-bullet {
+  background: white;
+  opacity: 1;
+  width: 12px;
+  height: 12px;
+}
+.swiper-pagination-bullet-active {
+  opacity: 1;
+  background: var(--primary);
+  width: 28px;
+  height: 14px;
+  border-radius: 8px;
+}
